--- a/index.html
+++ b/index.html
@@ -38,31 +38,62 @@
         <tbody>
         <tr>
             <td>1</td>
-            <td>Agile software development</td>
+            <td>
+                <li>
+                    <a href="https://courses.cs.ut.ee/2019/designalg/fall">Agile software development</a>
+                </li>
+            </td>
             <td>1</td>
             <td>82</td>
         </tr>
         <tr>
             <td>2</td>
-            <td>System modeling</td>
+            <td>
+                <li>
+                    <a href="https://courses.cs.ut.ee/2019/designalg/fall">System modeling</a>
+                </li>
+            </td>
             <td>1</td>
             <td>85</td>
         </tr>
         <tr>
             <td>3</td>
-            <td>Object-oriented programming</td>
+            <td>
+                <li>
+                    <a href="https://courses.cs.ut.ee/2019/designalg/fall">Object-oriented programming</a>
+                </li>
+            </td>
             <td>2</td>
             <td>99</td>
         </tr>
         <tr>
             <td>4</td>
-            <td>Estonian language Level A2</td>
+            <td>
+                <li>
+                    <a href="https://courses.cs.ut.ee/2019/designalg/fall">Estonian language Level A2</a>
+                </li>
+            </td>
             <td>2</td>
             <td>65</td>
         </tr>
         </tbody>
+        <tfoot>
+        <td></td>
+        <td></td>
+        <td>Average</td>
+        <td></td>
+        </tfoot>
     </table>
 </section>
+<form>
+    Title:<br>
+    <input type="text" name="Title"><br>
+    Semester:<br>
+    <input type="text" name="Semester"><br>
+    Grade:<br>
+    <input type="text" name="Grade"><br>
+    <input type="submit">
+</form>
 <footer>
     <ul>
         <li>
